Navigation Bar Added

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
-  <title>TriAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#FFFFFF">
+  <meta
+  name="Tri-Angular"
+  content="Triangle Detection Sample SPA">
+  <meta property="og:title" content="Tri-Angular">
+  <meta property="og:url" content="https://roman-octavian.github.io/Tri-Angular/">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="en_GB">
+  <meta name="description" content= "Triangle Detection Sample SPA">
+  <meta name="author" content="Octavian Roman">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="#">
+
+  <title>Tri-Angular</title>
 </head>
+
 <body>
+  <noscript>JavaScript required to run this page</noscript>
   <app-root></app-root>
 </body>
+
 </html>
